# openlearn

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  TODO.md  pyproject.toml
.claude/skills/openlearn-architecture/: SKILL.md
.claude/skills/openlearn-phase-review/: SKILL.md
.claude/skills/openlearn-tutor-policy/: SKILL.md
.claude/skills/openlearn-validate/: SKILL.md
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-smoke.yml  release.yml  tests.yml
docs/: AGENT_RUNS.md  ARCHITECTURE.md  DEPENDENCIES.md  DEVELOPMENT.md  DOGFOOD_EVIDENCE.md  LEARNING_SCIENCE.md  PLAN.md  TUTOR_INTERACTION.md  V0.5.0.md  V0.6.0.md  V0.7.0.md
docs/plans/: 2026-07-16-001-feat-codex-dogfood-explorer-plan.md
manual-tests/: README.txt  run-menu-isolated.sh  seed-vim-course.py  smoke-full.sh  smoke-non-model.sh
manual-tests/context/: practical-vim-syllabus.txt
scripts/: repo-workflow  run-codex-dogfood  run-tutor-behavior-eval
src/openlearn/: __init__.py  cli.py  constants.py  drills.json  models.py  onboarding.py  stats.py  text.py  tui.py  ui.py
src/openlearn/templates/: algorithms.json  git.json  http-apis.json  linux-cli.json  networking.json  python-basics.json  sql.json  vim.json
tests/: test_cli.py  test_onboarding.py  test_repo_workflow.py  test_stats.py
tests/dogfood/: __init__.py  artifacts.py  codex_action.schema.json  codex_driver.py  codex_missions.py  evidence.py  explorer.py  missions.py  pty_runner.py  test_artifacts.py  test_codex_driver.py  test_codex_missions.py  test_evidence.py  test_explorer.py  test_missions.py  test_pty_runner.py
tests/evals/: test_conversation_quality.py  test_judge_calibration.py  test_move_policy.py  test_tutor_behavior_harness.py  test_tutor_regressions.py  tutor_behavior.py
tests/evals/fixtures/: judge_calibration_cases.json  move_eval_scenarios.json
tests/evals/regressions/: README.md  blank_input_no_crash.json  mock_response_not_empty.json  status_bar_after_response.json  unknown_command_recovers.json
tests/evals/scenarios/: correct_brief_answer.json  correct_full_answer.json  off_topic_question.json  overconfident_learner.json  prerequisite_gap.json  stuck_learner.json
tests/workflows/: conftest.py  test_repl_smoke.py
