[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openlearn"
dynamic = ["version"]
description = "Local-first AI tutoring that keeps learning state in files you own"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Ross" }]
dependencies = [
    "pdfplumber>=0.11",
    "platformdirs>=4.0",
    "python-docx>=1.1",
    "requests>=2.31",
    "rich>=13.7",
    "trafilatura>=1.9",
]
keywords = ["ai", "learning", "tutor", "local-first", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Education",
]

[project.optional-dependencies]
# Math-based forgetting-curve SRS. Opt in via `pip install openlearn[ebisu]` and
# `openlearn config` srs=ebisu; the fixed-interval schedule is the default.
ebisu = ["ebisu>=2.2,<3"]
dev = [
    "deepeval>=2.0",
    "pexpect>=4.9",
    "pytest>=8.0",
]

[project.scripts]
openlearn = "openlearn.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
version = { attr = "openlearn.__version__" }

[tool.setuptools.package-data]
openlearn = ["templates/*.json", "drills.json"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-m 'not slow'"
markers = [
    "slow: marks tests as slow (AI judge calls; skip with -m 'not slow')",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]
# tui.py is an optional, lazily-imported prompt_toolkit front end; its dependency
# is intentionally not installed, so exclude it from the always-on lint lane.
extend-exclude = ["src/openlearn/tui.py"]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["src"]
exclude = ["src/openlearn/tui.py"]
typeCheckingMode = "basic"
